downgraded the electron store version

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>ASTM FTP Parser</title>
+  <title>FORMIFY HORIBA INTEGRATOR</title>
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">ASTM FTP Parser</a>
+      <a class="navbar-brand" href="#">FORMIFY HORIBA INTEGRATOR</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
