--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-// index.html
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>FORMIFY HORIBA INTEGRATOR</title>
+  <title>Horiba Integrator</title>
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
