--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
       <div class="card">
         <div class="card-header d-flex justify-content-between align-items-center">
           <h5>ASTM Files Monitoring</h5>
-          <div>
+          <!-- <div>
             <button id="start-monitoring-btn" class="btn btn-success">Start Monitoring</button>
             <button id="stop-monitoring-btn" class="btn btn-danger">Stop Monitoring</button>
-          </div>
+          </div> -->
         </div>
         <div class="card-body">
           <div id="status-message" class="alert alert-info">
-            Monitoring not started. Configure FTP and backend server, then start monitoring.
+            Monitoring for ASTM Files through FTP.
           </div>
           
           <div id="astm-data-container" class="d-none">
@@ -59,7 +59,6 @@
                   <tr id="result-header"></tr>
                 </thead>
                 <tbody id="results-body">
-                  <tr id="result-data"></tr>
                 </tbody>
               </table>
             </div>
